--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,16 +20,19 @@
 .portfolio__item-image {
     border-radius: 1.5rem;
     overflow: hidden;
+    max-height: 200px;
 }
 
 .portfolio__item h3 {
     margin: 1.2rem 0 2rem;
+    text-align: center;
 }
 
 .portfolio__item-cta {
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
