--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -24,7 +24,12 @@
 }
 
 .portfolio__item h3 {
-    margin: 1.2rem 0 2rem;
+    margin: 1rem 1rem 0rem 1rem;
+    text-align: center;
+}
+
+.portfolio__item p {
+    margin: 0rem 0rem 1rem 0rem;
     text-align: center;
 }
 
